[package]
name = "libhmmer-sys"
version = "0.1.0"
edition = "2018"
links = "hmmer"
description = "Rust bindings to libhmmer and libeasel"
repository = "https://github.com/mustafa-guler/libhmmer-sys"
categories = ["external-ffi-bindings", "science"]
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
fs_extra = "1.2.0"
num_cpus = "^1.0"
